Fixed the problem that placeholder of <InputPicker/> and <DatePicker/> not alignment with the input control.

--- a/styles/tag-picker.less
+++ b/styles/tag-picker.less
@@ -3,9 +3,9 @@
 @import 'mixins/picker';
 
 .@{tag-picker} {
-  // Make sure vertical align with input
+  // Make sure align with input
   &:not(.@{ns}picker-disabled) .@{ns}picker-toggle {
-    top: 0;
+    left: 0;
   }
 
   &.@{ns}picker-disabled {
